--- a/p1/app/templates/index.html
+++ b/p1/app/templates/index.html
@@ -1,8 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Django</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mini Shopping Website</title>
 </head>
 <body>
-    <h1>Hello Developers !</h1>
+    <h1>flopkart</h1>
 </body>
 </html>
