--- a/p1/app/templates/index.html
+++ b/p1/app/templates/index.html
@@ -1,11 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Shopping Website</title>
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
 </head>
 <body>
-    <h1>flopkart</h1>
+    <h1 class="h1">flopkart</h1>
 </body>
 </html>
