--- a/p1/app/templates/index.html
+++ b/p1/app/templates/index.html
@@ -1,13 +1,49 @@
+{% include "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Shopping Website</title>
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-</head>
-<body>
-    <h1 class="h1">flopkart</h1>
-</body>
-</html>
+{% block content %}
+<header class="py-5">
+        <div class="container px-lg-5">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Carousel content here -->
+         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="{% static '/images/i1.jpg' %}" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static '/images/i1.jpg' %}" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src=".{% static '/images/i1.jpg' %}" class="d-block w-100" alt="...">
+          </div>
+        </div>
+         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+           <span class="visually-hidden">Previous</span>
+         </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+</header>
+<div class="container px-5 my-5">
+    <div class="row gx-5 justify-content-center">
+        <div class="col-lg-10 col-xl-7">
+            <div class="text-center">
+                <div class="fs-4 mb-4 fst-italic">"Make every piece of jewelry no longer ordinary,bring unlimited business opportunities to jewelers, and bring visual feast to customers.
+
+                    "</div>
+                <div class="d-flex align-items-center justify-content-center">
+                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="...">
+                    <div class="fw-bold">
+                        Tom Ato
+                        <span class="fw-bold text-primary mx-1">/</span>
+                        CEO, Pomodoro
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
