--- a/p1/app/templates/base.html
+++ b/p1/app/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!doctype html>
 <html lang="en" data-bs-theme="auto">
   <head>
     <meta charset="utf-8">
@@ -76,7 +75,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria="true">Cart</a>
