--- a/p1/app/templates/register.html
+++ b/p1/app/templates/register.html
@@ -16,7 +16,7 @@
   </div>
   <div class="col-12">
     <label for="inputAddress" class="form-label">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <input type="text" class="form-control" id="inputAddress" placeholder="Address">
   </div>
   <div class="col-md-6">
     <label for="inputCity" class="form-label">City</label>
