--- a/p1/static/css/style.css
+++ b/p1/static/css/style.css
@@ -102,3 +102,29 @@ body {
   border-top-right-radius: 0;
 }
 /*endof registration css*/
+
+/*login css*/
+
+.form-signin {
+    max-width: 330px;
+    padding: 1rem;
+  }
+  
+  .form-signin .form-floating:focus-within {
+    z-index: 2;
+  }
+  
+ 
+  .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  /*end login css*/
