--- a/p1/app/templates/base.html
+++ b/p1/app/templates/base.html
@@ -78,7 +78,7 @@
             <a class="nav-link" href="{% url 'register' %}">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria="true">Cart</a>
+            <a class="nav-link" aria="true" href="{% url 'cart' %}">Cart</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
