--- a/p1/static/css/style.css
+++ b/p1/static/css/style.css
@@ -128,3 +128,78 @@ body {
   }
 
   /*end login css*/
+
+  /* start cart css */
+  @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+
+*{
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+.container{
+    width: 95%;
+    height: 650px;
+    background-color: #dfdfe2;
+    margin: 90px auto;
+    border-radius: 4px 4px 0 0;
+}
+.links{
+    display: flex;
+}
+.links a{
+    margin: 10px 0 0;
+    text-decoration: none;
+    color: #000;
+    
+}
+.a-flipkart , .a-grocery{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    font-size: 2rem;
+    
+}
+.links a:hover{
+    color: rgb(79, 79, 249);
+}
+.links a.active {
+    border-bottom: 3px solid #2a55e5;
+}
+.flipkart , .grocery{
+   padding: 17px;
+    border-radius: 3px;
+}
+
+hr{
+    height: 10px; /* Adjust the height as needed */
+    background-color: #FFF; /* Change the color to your desired color */
+    border: none; /* Remove the default border */
+    margin: 0; /* Add margin above and below the <hr> */
+}
+.cart-items {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+}
+.cart-items img {
+    padding: 3rem 0 0;
+    max-width: 100%; /* Adjust the maximum width as needed */
+    height: 300px; /* Maintain aspect ratio */
+}
+h2{
+    text-align: center;
+    font-weight: 400;
+}
+.cart-items button{
+    padding: 15px 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.3rem;
+    width: 150px;
+}
+/* end of cart css */
