--- a/p1/app/templates/base.html
+++ b/p1/app/templates/base.html
@@ -107,7 +107,7 @@
 </main>
   <!-- FOOTER -->
   <footer class="bg-dark py-4 mt-auto ">
-            <div class="container px-5">
+            <div class="x-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright © Your Website 2023</div></div>
                     <div class="col-auto">
