register -> signup renaming

--- a/p1/app/templates/login.html
+++ b/p1/app/templates/login.html
@@ -23,7 +23,7 @@
     </label>
   </div>
   <div class="mb-3">
-    <a class="btn btn-secondary w-100 py-2" href="{% url 'register' %}">Don't have an account? Sign up</a>
+    <a class="btn btn-secondary w-100 py-2" href="{% url 'signup' %}">Don't have an account? Sign up</a>
   </div>
     <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
 </form>
