--- a/p1/app/templates/signup.html
+++ b/p1/app/templates/signup.html
@@ -12,8 +12,8 @@
   </div>
 
   <div class="form-floating">
-    <input type="text" class="form-control" id="floatingAddress" placeholder="Address">
-    <label for="floatingAddress">Address</label>
+    <input type="username" class="form-control" id="floatingUsername" placeholder="Username">
+    <label for="floatingUsername">Username</label>
   </div>
 
   <div class="form-floating">
