--- a/p1/app/templates/base.html
+++ b/p1/app/templates/base.html
@@ -70,7 +70,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+            <a class="nav-link" aria-current="page" href="{% url 'signin' %}">Sign in</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria="true" href="{% url 'cart' %}">Cart</a>
