--- a/p1/app/templates/signin.html
+++ b/p1/app/templates/signin.html
@@ -8,11 +8,11 @@
   <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
   <div class="form-floating">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
     <label for="floatingInput">Email address</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
 
