--- a/p1/app/templates/signup.html
+++ b/p1/app/templates/signup.html
@@ -12,21 +12,21 @@
   </div>
 
   <div class="form-floating">
-    <input type="username" class="form-control" id="floatingUsername" placeholder="Username">
+    <input type="username" class="form-control" id="floatingUsername" name="username" placeholder="Username">
     <label for="floatingUsername">Username</label>
   </div>
 
   <div class="form-floating">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
     <label for="floatingInput">Email</label>
   </div>
 
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="confirm Password">
+    <input type="password" class="form-control" id="floatingPassword" name="cpassword" placeholder="confirm Password">
     <label for="floatingPassword">Confirm password</label>
   </div>
   <button class="btn btn-primary w-100 py-2" type="submit">Sign up</button>
