--- a/p1/app/templates/base.html
+++ b/p1/app/templates/base.html
@@ -69,10 +69,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
+           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'signin' %}">Sign in</a>
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
-          <li class="nav-item">
+            <li class="nav-item">
             <a class="nav-link" aria="true" href="{% url 'cart' %}">Cart</a>
           </li>
           <li class="nav-item dropdown">
@@ -86,6 +87,14 @@
               <li><a class="dropdown-item" href="#">Wishlist</a></li>
             </ul>
           </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{% url 'signin' %}">Sign in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Categories</a>
+          </li>
+          {% endif %}
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
