Setup the correct routing for the existing pages

--- a/p1/templates/accounts/signin.html
+++ b/p1/templates/accounts/signin.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'store/base.html' %}
 {% load static %}
 {% block content %}
 <link href="{% static '/css/signupin.css' %}" rel="stylesheet">
@@ -32,7 +32,7 @@
     </label>
   </div>
   <div class="mb-3">
-    <a class="btn btn-secondary w-100 py-2" href="{% url 'signup' %}">Don't have an account? Sign up</a>
+    <a class="btn btn-secondary w-100 py-2" href="{% url 'accounts:signup' %}">Don't have an account? Sign up</a>
   </div>
     <button class="btn btn-primary w-100 py-2 " data-bs-toggle="modal" type="submit">Sign in</button>
 </form>
