--- a/p1/templates/accounts/signup.html
+++ b/p1/templates/accounts/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'store/base.html' %}
 {% load static %}
 {% block content %}
 <link href="{% static '/css/signupin.css' %}" rel="stylesheet">
