--- a/p1/templates/store/base.html
+++ b/p1/templates/store/base.html
@@ -63,7 +63,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'index' %}">MiniMart</a>
+      <a class="navbar-brand" href="{% url 'store:index' %}">MiniMart</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -71,10 +71,10 @@
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
            {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link" aria="true" href="{% url 'cart' %}">Cart</a>
+            <a class="nav-link" aria="true" href="{% url 'store:cart' %}">Cart</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,7 +89,7 @@
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'signin' %}">Sign in</a>
+            <a class="nav-link" aria-current="page" href="{% url 'accounts:signin' %}">Sign in</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Categories</a>
