--- a/p1/templates/store/cart.html
+++ b/p1/templates/store/cart.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
     {% load static %}
     {% block content %}
    <link href="{% static '/css/cart.css' %}" rel="stylesheet">
